fix extra overflow

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -31,6 +31,7 @@ body {
 
 .container {
     position: relative;
+    display: inline-block;
     top: 50%;
     -webkit-transform: translateY(-50%);
     transform: translateY(-50%);
